# tasty

./: .gitignore  CMakeLists.txt  README.md
CMake/: FindTetGen.cmake
Projects/: CMakeLists.txt  Makefile
Projects/example/: CMakeLists.txt  Makefile  barin.node  barin.poly  barout.ele  barout.face  barout.node  example  example_debug
Projects/main/: CMakeLists.txt  Makefile  defobj.h  globalincludes.h  main.cpp  particles.h  simulation.h  tastyio.cpp  tastyio.h  tetra.cpp  tetra.h
